# petfinder-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/app/: config.py  db.py  main.py  models.py  pf_client.py  schemas.py
backend/tests/: test_health.py  test_pf_client.py
etl/: run.py  sample_query.py
etl/tests/: sample_animals.py  test_sample_query.py
frontend/: app.py
infra/docker/: Dockerfile.api  Dockerfile.etl
